Working on Correct SkyBox.

--- a/Vergara_Brandon_Graphics2/Vergara_Brandon_Graphics2/Vergara_Brandon_Graphics2.vcxproj.filters
+++ b/Vergara_Brandon_Graphics2/Vergara_Brandon_Graphics2/Vergara_Brandon_Graphics2.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="DDSTextureLoader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Cube.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -46,5 +49,8 @@
   <ItemGroup>
     <FxCompile Include="Trivial_PS.hlsl" />
     <FxCompile Include="Trivial_VS.hlsl" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="SunsetSkybox.dds" />
   </ItemGroup>
 </Project>
